# TinyRetro

./: CMakeLists.txt  README.md  main.cpp
gbaemu/: CMakeLists.txt  main.c
gbemu/: CMakeLists.txt  main.c
nesemu/: CMakeLists.txt  NES.cpp  NES.h  main.cpp
smolnes/: CMakeLists.txt  smolnes  smolnes-deobfuscated-win.c  smolnes.comp
tools/Upx/: help.txt
